# obs-roi-ui

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build-project.yaml
cmake/common/: bootstrap.cmake
data/locale/: en-US.ini
src/: encoder-preview-ff-glue.cpp  encoder-preview-ff-glue.hpp  encoder-preview.cpp  encoder-preview.hpp  plugin-main.c  roi-editor.cpp  roi-editor.hpp
src/forms/: encoder-preview.ui  roi-editor.ui
